--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8200
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/docker
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
