--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8200
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
-spring.datasource.url=jdbc:postgresql://192.168.1.224:5432/
+spring.datasource.url=jdbc:postgresql://pgproducts:5432/
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
