--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=8200
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
-spring.datasource.url=jdbc:h2:~/testProduct;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/newproducts;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
