--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@ spring.application.name=product-service
 
 server.port=8200
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
 
 spring.datasource.url=jdbc:postgresql://pgproducts:5432/
 spring.datasource.driverClassName=org.postgresql.Driver
